{
  "version": 4,
  "terraform_version": "1.15.8",
  "serial": 21,
  "lineage": "8d71d653-29d5-cc55-746e-b893600f297b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:424322298651:internet-gateway/igw-0b4b006cf895a5f56",
            "id": "igw-0b4b006cf895a5f56",
            "owner_id": "424322298651",
            "region": "eu-central-1",
            "tags": {
              "Name": "bookmark_igw"
            },
            "tags_all": {
              "Name": "bookmark_igw"
            },
            "vpc_id": "vpc-01bcabf8e0bbbeccb"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "424322298651",
            "id": "igw-0b4b006cf895a5f56",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:424322298651:route-table/rtb-08fbd7519bf6b070f",
            "id": "rtb-08fbd7519bf6b070f",
            "owner_id": "424322298651",
            "propagating_vgws": [],
            "region": "eu-central-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-0b4b006cf895a5f56",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "odb_network_arn": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "bookmark-public-route-table"
            },
            "tags_all": {
              "Name": "bookmark-public-route-table"
            },
            "timeouts": null,
            "vpc_id": "vpc-01bcabf8e0bbbeccb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "424322298651",
            "id": "rtb-08fbd7519bf6b070f",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ed00850220bf3b93",
            "region": "eu-central-1",
            "route_table_id": "rtb-08fbd7519bf6b070f",
            "subnet_id": "subnet-080b5523a00ed39b7"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "424322298651",
            "id": "rtbassoc-0ed00850220bf3b93",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public_a",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0c73dc33b1446fcc1",
            "region": "eu-central-1",
            "route_table_id": "rtb-08fbd7519bf6b070f",
            "subnet_id": "subnet-0756260701f6bd1f7"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "424322298651",
            "id": "rtbassoc-0c73dc33b1446fcc1",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_internet_gateway.main",
            "aws_route_table.public",
            "aws_subnet.public_b",
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "ecs",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:424322298651:security-group/sg-029930b97839627e4",
            "description": "Security group for Bookmark ECS tasks",
            "egress": [],
            "id": "sg-029930b97839627e4",
            "ingress": [],
            "name": "bookmark-ecs-sg",
            "name_prefix": "",
            "owner_id": "424322298651",
            "region": "eu-central-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "bookmark-ecs-sg"
            },
            "tags_all": {
              "Name": "bookmark-ecs-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-01bcabf8e0bbbeccb"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "424322298651",
            "id": "sg-029930b97839627e4",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_a",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:424322298651:subnet/subnet-080b5523a00ed39b7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1a",
            "availability_zone_id": "euc1-az2",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-080b5523a00ed39b7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "424322298651",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "bookmark-public-a"
            },
            "tags_all": {
              "Name": "bookmark-public-a"
            },
            "vpc_id": "vpc-01bcabf8e0bbbeccb"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "424322298651",
            "id": "subnet-080b5523a00ed39b7",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public_b",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:424322298651:subnet/subnet-0756260701f6bd1f7",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "eu-central-1b",
            "availability_zone_id": "euc1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0756260701f6bd1f7",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "424322298651",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "eu-central-1",
            "tags": {
              "Name": "bookmark-public-b"
            },
            "tags_all": {
              "Name": "bookmark-public-b"
            },
            "vpc_id": "vpc-01bcabf8e0bbbeccb"
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "424322298651",
            "id": "subnet-0756260701f6bd1f7",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_vpc.main"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:424322298651:vpc/vpc-01bcabf8e0bbbeccb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e82a9c14b46f76a1",
            "default_route_table_id": "rtb-0e9cb855f7c504857",
            "default_security_group_id": "sg-046d1f1d153f8c471",
            "dhcp_options_id": "dopt-089eb4e182d0f95a6",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-01bcabf8e0bbbeccb",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0e9cb855f7c504857",
            "owner_id": "424322298651",
            "region": "eu-central-1",
            "tags": {
              "Name": "bookmark-vpc"
            },
            "tags_all": {
              "Name": "bookmark-vpc"
            }
          },
          "identity_schema_version": 0,
          "identity": {
            "account_id": "424322298651",
            "id": "vpc-01bcabf8e0bbbeccb",
            "region": "eu-central-1"
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_security_group_egress_rule",
      "name": "ecs_all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:eu-central-1:424322298651:security-group-rule/sgr-02e1d81a95d56105f",
            "cidr_ipv4": "0.0.0.0/0",
            "cidr_ipv6": null,
            "description": null,
            "from_port": null,
            "id": "sgr-02e1d81a95d56105f",
            "ip_protocol": "-1",
            "prefix_list_id": null,
            "referenced_security_group_id": null,
            "region": "eu-central-1",
            "security_group_id": "sg-029930b97839627e4",
            "security_group_rule_id": "sgr-02e1d81a95d56105f",
            "tags": null,
            "tags_all": {},
            "to_port": null
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "identity": {
            "account_id": "424322298651",
            "id": "sgr-02e1d81a95d56105f",
            "region": "eu-central-1"
          },
          "dependencies": [
            "aws_security_group.ecs",
            "aws_vpc.main"
          ]
        }
      ]
    }
  ]
}